test/parallel/taskPar/vass/taskintents-inout-error.good
taskintents-inout-error.chpl:3: syntax error: near 'inout'
taskintents-inout-error.chpl:3: syntax error: invalid intent expression in 'with' clause
